# AI-MUSIC-COMPOSER

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  background.jfif  logging_setup.py  main.py  pyproject.toml  utils.py
