[project]
name = "ai-music-composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "isort>=7.0.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-groq>=1.1.0",
    "loguru>=0.7.3",
    "music21>=9.9.1",
    "mypy>=1.19.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "streamlit>=1.52.0",
    "synthesizer>=0.2.0",
]
